--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -2,14 +2,14 @@ name: Update README (Recent Activity)
 
 on:
   schedule:
-    - cron: "*/30 * * * *" # a cada 30 min
+    - cron: "*/30 * * * *"
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  build:
+  update-readme:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
